<resources>
    <string name="app_name">PolarHRServer</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status: %1$s</string>
    <string name="hr">hr: %1$s</string>
    <string name="current_ecg_value">Current ECG Value: %1$s</string>
    <string name="current_acc_value">Current ACC Value: %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="n_a">N/A</string>
    <string name="server_address">Server Address:</string>
    <string name="hint_ip">0.0.0.0</string>
    <string name="port">Port:</string>
    <string name="port_example">1234</string>
    <string name="start_sending_data">Start Sending Data</string>
    <string name="stop_sending_data">Stop Sending Data</string>
    <string name="previous_connections">Previous connections:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ecgSensorTitle">ECG Sensor</string>
    <string name="accSensorTitle">ACC Sensor</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="use">Use</string>
    <string name="connect_pm">Connect PM</string>
    <string name="disconnect_pm">Disconnect PM</string>
    <string name="pm_status">PM status: %1$s</string>
    <string name="power">Power: %1$s</string>
    <string name="torque">Torque: %1$s</string>
    <string name="revs">Revs: %1$s</string>
    <string name="last_rev_time">Last Rev: %1$s</string>
</resources>
