<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tv_status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="8dp" />

    <TextView
            android:id="@+id/tv_hr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            android:text="@string/hr"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="8dp" />

    <TextView
            android:id="@+id/tv_ecg_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hr"
            android:text="@string/current_ecg_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="8dp" />

    <TextView
            android:id="@+id/tv_acc_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ecg_value"
            android:text="@string/current_acc_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="8dp" />

    <Button
            android:id="@+id/btn_connect"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_margin="8dp"
            android:onClick="onConnectClicked" />

</androidx.constraintlayout.widget.ConstraintLayout>